<resources>
    <string name="app_name">News App</string>
    <string name="image_view">Image View</string>
    <string name="text_login">Login</string>
    <string name="text_login_ins">Please Sign In to continue</string>
    <string name="email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login_button">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_account">Don’t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="text_ins_signup">Please fill the input below here</string>
    <string name="back">Back</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="text_already">Already have an account?</string>
    <string name="date">9 Feb, 2021</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="please_fill_the_input_below_here">Please fill the input below here</string>
    <string name="breaking_news">Breaking News</string>
    <string name="highlight">Contact Lost With Sriwijaya Air Boeing 737-500 After Take Off</string>
    <string name="nathania_slavi">Nathania Slavi</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_items">An Illinois town fights to save its power plant</string>
    <string name="dummy_tgl">15/02/2021</string>
    <string name="dummy_duration">10 Min Read</string>
    <string name="floating_button">Floating Button</string>
    <string name="content_desc">A search is underway after suspected debris from an Indonesian Sriwijaya Air flight was found hours after the plane went missing. The plane lost contact after taking off from Indonesian capital Jakarta on Saturday en route to the city of Pontianak in West Kalimantan province. The Boeing 737-500 flight was carrying 62 people.The 50 passengers included seven children and three babies.</string>
    <string name="nathania_gmail_com">nathania@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>
    <string name="privacy_and_setting_help">Privacy and Setting Help</string>
    <string name="notification">Notification</string>
    <string name="edit_account">Edit Account</string>
    <string name="change_account">Change Account</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
</resources>